ontol/ontol-compiler/test-cases/error/parser/underscore_ident.on
def _foo // ERROR parse error: found `_`, expected one of `@private`, `@open`, `@extern`, `@symbol`, identifier
